[gd_scene load_steps=8 format=3 uid="uid://ck38obqrvekiy"]

[ext_resource type="Texture2D" uid="uid://qvm76kihpjji" path="res://Assets/Enemies/drone.png" id="1_caywf"]
[ext_resource type="Script" path="res://actors/entities/Drone.gd" id="2_7t1j7"]
[ext_resource type="AudioStream" uid="uid://rqyg6wryjs6x" path="res://Assets/sfx/enemy_kaboom.mp3" id="3_s16h3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ku6e3"]
size = Vector2(212.526, 36.4331)

[sub_resource type="CircleShape2D" id="CircleShape2D_ijows"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qbrio"]
bg_color = Color(0.509804, 0.498039, 0.505882, 1)
skew = Vector2(0.8, 0)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b7iol"]
bg_color = Color(0.6, 0.215686, 0.219608, 1)
skew = Vector2(0.8, 0)
border_width_left = 1
border_width_top = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)

[node name="Drone" type="Sprite2D"]
scale = Vector2(0.053, 0.053)
texture = ExtResource("1_caywf")
script = ExtResource("2_7t1j7")

[node name="Hurtbox" type="Area2D" parent="."]
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(34.7826, -2.17391)
scale = Vector2(1.601, 1.601)
shape = SubResource("RectangleShape2D_ku6e3")

[node name="Range" type="Area2D" parent="."]
position = Vector2(-34.7826, 2.17391)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range"]
position = Vector2(34.7826, -2.17391)
scale = Vector2(1.601, 1.601)
shape = SubResource("CircleShape2D_ijows")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(36.9565, -2.17391)
scale = Vector2(16.8912, 2.67343)

[node name="Enemy_Death" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_s16h3")
pitch_scale = 3.31
max_polyphony = 10

[node name="HP" type="ProgressBar" parent="."]
offset_left = -163.217
offset_top = 56.5652
offset_right = 165.783
offset_bottom = 61.5652
theme_override_styles/background = SubResource("StyleBoxFlat_qbrio")
theme_override_styles/fill = SubResource("StyleBoxFlat_b7iol")
value = 40.0
show_percentage = false

[node name="W1" type="Marker2D" parent="."]
position = Vector2(-4.34781, -45.6522)

[node name="W5" type="Marker2D" parent="."]
position = Vector2(210.869, -3.8147e-06)

[node name="AttackTimer1" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="AttackTimer5" type="Timer" parent="."]
autostart = true

[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="area_entered" from="Range" to="." method="_on_range_area_entered"]
[connection signal="area_exited" from="Range" to="." method="_on_range_area_exited"]
[connection signal="timeout" from="AttackTimer1" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="AttackTimer5" to="." method="_on_attack_timer_5_timeout"]
